Fixed vertical alignment of user name and screenname.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -312,8 +312,10 @@ body {
 .tweet-screenname,
 .tweet-time {
     display: inline-block;
-    vertical-align: top;
-    line-height: 12px;
+    top: -2px;
+    position: relative;
+    height: 14px;
+    line-height: 14px;
 }
 
 .tweet-name {
